Updated tests in RecipeTest